8336702: C2 compilation fails with "all memory state should have been processed" assert

Reviewed-by: thartmann, chagedorn